src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Quality_Helper__c</fullName>
        <formula>IF(ISBLANK(Email), 0, 1)
+ IF(ISBLANK(Phone), 0, 1)
+ IF(ISBLANK(Company), 0, 1)
+ IF(ISBLANK(Title), 0, 1)
+ IF(ISBLANK(TEXT(Industry)), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality Helper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IMAGE(
  CASE(Lead_Quality_Helper__c,
    5, &quot;/img/samples/stars_500.gif&quot;,
    4, &quot;/img/samples/stars_400.gif&quot;,
    3, &quot;/img/samples/stars_300.gif&quot;,
    2, &quot;/img/samples/stars_200.gif&quot;,
    1, &quot;/img/samples/stars_100.gif&quot;,
    &quot;/img/samples/stars_000.gif&quot;
  ),
  IF (Lead_Quality_Helper__c &gt;= 1,
      TEXT(Lead_Quality_Helper__c) &amp; &quot; stars&quot;,  
      &quot;0 stars&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF(
   AnnualRevenue &gt; 1000000
   &amp;&amp; CONTAINS(
           CASE(Country,
                &quot;United States&quot;, &quot;US&quot;,
                &quot;America&quot;, &quot;US&quot;,
                &quot;USA&quot;, &quot;US&quot;,
                &quot;US&quot;, &quot;US&quot;,
                &quot;NA&quot;),
            &quot;US&quot;
       ),
   IF(
      ISPICKVAL(LeadSource, &quot;Partner Referral&quot;), 
      &quot;HOT&quot;,
      IF(
         ISPICKVAL(LeadSource, &quot;PurchasedList&quot;) || ISPICKVAL(LeadSource, &quot;Web&quot;),
         &quot;Warm&quot;,
         &quot;Cold&quot; 
      )
   ),
   &quot;Cold&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE(
    CASE(Rating__c,
       &quot;Hot&quot;, &quot;/img/samples/stars_500.gif&quot;,
       &quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;,
       &quot;Cold&quot;, &quot;/img/samples/stars_100.gif&quot;,
       &quot;/img/samples/stars_000.gif&quot; 
    ),
    &quot;Unknown&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Source_Partner_Referral__c</fullName>
        <formula>TEXT(LeadSource) = &quot;Partner Referral&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Was Source Partner Referral</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Lead_not_Change_from_Closed_to_Opened</fullName>
        <active>true</active>
        <description>Lead cannot be changed from Closed to Open.</description>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Open - Not Contacted&quot;)
&amp;&amp; BEGINS(TEXT(PRIORVALUE(Status)), &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Lead cannot be changed from Closed to Open.</errorMessage>
    </validationRules>
</CustomObject>